--- a/AsmLib/AsmLib.vcxproj
+++ b/AsmLib/AsmLib.vcxproj
@@ -189,6 +189,7 @@
       <EnableUAC>false</EnableUAC>
       <ModuleDefinitionFile>JAAsm.def</ModuleDefinitionFile>
       <TargetMachine>MachineX64</TargetMachine>
+      <AssemblyDebug>true</AssemblyDebug>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
